# haskell-misc-experiments

./: README.md
ICMPTrace/: ICMPTrace.hs  icmptrace.cabal
SimpleTCP/: SimpleTCP.hs  simpletcp.cabal
TCPEcho/: TCPEchoClient.hs  TCPEchoServer.hs  tcpecho.cabal
Tinkerbell/: Tinkerbell.hs
movieTitleScraper/: movieTitleScraper.hs
