cabal-version:       >=1.10
name:                tcpecho
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Derek Kwan
maintainer:          derek.x.kwan@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable httpserv-hs
  main-is:             TCPEchoServer.hs
  -- other-modules:
  -- other-extensions:
  ghc-options: -dynamic
  build-depends:       base >=4.13 && <4.14
                       , network, bytestring, utf8-string
  --hs-source-dirs:      src
  default-language:    Haskell2010
